# esp32-robot

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  CMakeLists.txt  LICENSE  README.md  commitlint.config.js  diagram.json  package.json  partitions.csv  sdkconfig.defaults  wokwi.toml
.github/workflows/: ci.yml
components/camera_stream/: CMakeLists.txt
components/camera_stream/include/: camera_stream.h
components/camera_stream/src/: camera_stream.c
components/hal/include/: hal_types.h
components/hal/src/: hal_pwm.c
components/http_server/: CMakeLists.txt
components/http_server/include/: api_handlers.h  api_helpers.h  http_server.h
components/http_server/src/: api_handlers.c  api_helpers.c  http_server.c
components/motor_control/: CMakeLists.txt
components/motor_control/include/: motor_control.h  pwm_ramper.h
components/motor_control/src/: motor_control.c  pwm_ramper.c
components/robot_core/: CMakeLists.txt
components/robot_core/include/: robot.h  robot_types.h
components/robot_core/src/: robot.c
components/robot_hal/: CMakeLists.txt
components/robot_hal/include/: hal_gpio.h  hal_pwm.h  hal_types.h
components/robot_hal/src/: hal_gpio.c  hal_pwm.c
components/safety_handler/: CMakeLists.txt
components/safety_handler/include/: safety_handler.h
components/safety_handler/src/: safety_handler.c
components/servo_control/: CMakeLists.txt
components/servo_control/include/: servo_control.h
components/servo_control/src/: servo_control.c
components/wifi_manager/: CMakeLists.txt
components/wifi_manager/include/: wifi_manager.h
docs/: API.md  HARDWARE.md  content_processed.typ  content_raw.typ  ebook_esp32_robot.md  ebook_final.typ  ebook_main.typ  ebook_template.typ
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/include/: app_config.h
simulation/: mock_server.py
spiffs_data/: api-client.js  docs.html  index.html  openapi.yaml  robot-controller.js  style.css
test/: CMakeLists.txt
test/host/: CMakeLists.txt  test_safety_validate.c
test/host/mocks/: esp_err.h  mock_esp.c
test/main/: CMakeLists.txt  test_main.c  test_motor_control.c  test_robot.c  test_safety_handler.c  test_servo_control.c
(+1 files in other folders)
